@@ -62,7 +62,7 @@ public class RemoteResourceRetriever implements ResourceRetriever {
         Map<String, Serializable> props = new HashMap<String, Serializable>(properties);
 
         if (bytesToSkip > 0) {
-            props.put(BYTES_TO_SKIP, new Long(bytesToSkip));
+            props.put(BYTES_TO_SKIP, Long.valueOf(bytesToSkip));
         }
 
         return source.retrieveResource(resourceUri, props);
